# webview-application

./: .gitignore  .gitmodules  readme.md
projects/application/: Cargo.toml
projects/application/src/: main.rs
projects/application/src/application/: application.rs  command_types.rs
projects/application/src/database/: database.rs
projects/client/: custom.d.ts  package.json  tsconfig.json
projects/client/src/: Routes.tsx  index.tsx  native.ts
projects/client/src/app/: Application.tsx
projects/client/src/assets/: common.css
projects/client/src/components/Navigation/: Navigation.tsx  navigation.module.css
projects/client/src/pages/Application/: Application.tsx  application.css
projects/client/src/pages/Cube/: Cube.tsx
projects/client/src/pages/Cubes/CubeCard/: CubeCard.tsx  cube-card.module.css
projects/client/tools/webpack/configs/: webpack-dev.config.js  webpack-prod.config.js
projects/launcher/: Cargo.toml
projects/launcher/src/: main.rs  native_handler.rs
projects/launcher/src/native_apis/: file_dialog.rs
projects/webview_native_api/src/: lib.rs  native_handler.rs
